--- a/client/index.html
+++ b/client/index.html
@@ -23,7 +23,7 @@
 	</ion-nav-view>
       </ion-tab>
       <ion-tab icon="ion-grid" ui-sref="episodes">
-	<ion-nav-view name="episodes" ng-controller="main.episodes.trending as trendingCtrl">
+	<ion-nav-view name="episodes">
 	</ion-nav-view>
       </ion-tab>
       <ion-tab icon="ion-help" ui-sref="help">
@@ -35,50 +35,6 @@
     <script src="scripts/bundle.js"></script>
     <script src="cordova.js"></script>
 
-    <script type="text/ng-template" id="home.html">
-      <ion-view title="Home">
-	<ion-content padding="true">
-	  <h2>Home Page</h2>
-	  <p>Here's the main route for the app.</p>
-	</ion-content>
-      </ion-view>
-    </script>
-
-    <script type="text/ng-template" id="help.html">
-      <ion-view title="Home">
-	<ion-content padding="true">
-	  <h2>Using the app</h2>
-	  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis architecto hic officia quasi excepturi sequi deleniti maiores consectetur veritatis sint?</p>
-	</ion-content>
-      </ion-view>
-    </script>
-
-    <script type="text/ng-template" id="home.html">
-      <ion-view title="Home">
-	<ion-content padding="true">
-	  <h2>Home Page</h2>
-	  <p>Here's the main route for the app.</p>
-	</ion-content>
-      </ion-view>
-    </script>
-    
-    <script type="text/ng-template" id="episodes.html">
-      <ion-view title="Home">
-	<ion-content padding="true">
-	  <h2>Episodes</h2>
-	  <p>Here's episodes.</p>
-	</ion-content>
-      </ion-view>
-    </script>
-    
-    <script type="text/ng-template" id="help.html">
-      <ion-view title="Home">
-	<ion-content padding="true">
-	  <h2>Using the app</h2>
-	  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis architecto hic officia quasi excepturi sequi deleniti maiores consectetur veritatis sint?</p>
-	</ion-content>
-      </ion-view>
-    </script>
-</body>
+p</body>
 
 </html>
