Added another controller, got controllers to work in views

--- a/client/index.html
+++ b/client/index.html
@@ -16,10 +16,10 @@
     <!--[if lt IE 7]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
 	    <![endif]-->
+
     <ion-tabs class="tabs-positive">
       <ion-tab icon="ion-home" ui-sref="home">
 	<ion-nav-view name="home">
-	  <h1> home </h1>
 	</ion-nav-view>
       </ion-tab>
       <ion-tab icon="ion-grid" ui-sref="episodes">
@@ -28,13 +28,12 @@
       </ion-tab>
       <ion-tab icon="ion-help" ui-sref="help">
 	<ion-nav-view name="help">
-	  <h1> help </h1>
 	</ion-nav-view>
       </ion-tab>
     </ion-tabs>
     <script src="scripts/bundle.js"></script>
     <script src="cordova.js"></script>
 
-p</body>
+</body>
 
 </html>
